tests/error/udpip.d

 udpip:::receive
 {
	 @[args[0]->udp_saddr] = count();
 }